--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.555.0",
-    "@vitejs/plugin-react": "^5.1.1",
-    "vite": "^7.2.4",
+    "lucide-react": "latest",
     "path": "^0.12.7",
+    "vite": "^7.2.4",
+    "react-dom": "^19.2.0",
+    "@vitejs/plugin-react": "^5.1.1",
     "url": "^0.11.4"
   },
   "devDependencies": {
